<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
                     

                         <requestFocus />
                         
                         
                         <Button
                             android:id="@+id/button3"
                             android:layout_width="80dp"
                             android:layout_height="50dp"
                             android:layout_alignParentLeft="true"
                             android:layout_below="@+id/button1"
                             android:layout_marginTop="14dp"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
                             android:onClick="change"
                             android:text="@string/button_change" />
                         
                             
                         <Button
                             android:id="@+id/button1"
                             android:layout_width="130dp"
                             android:layout_height="wrap_content"
                             android:layout_alignBaseline="@+id/button2"
                             android:layout_alignBottom="@+id/button2"
                             android:layout_alignParentLeft="true"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
                             android:onClick="startgps"
                             android:text="@string/button_start" />

                         <Button
                             android:id="@+id/button2"
                             android:layout_width="130dp"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
                             android:layout_marginTop="78dp"
                             android:layout_toRightOf="@+id/button1"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
                             android:onClick="update"
                             android:text="@string/button_update" />

                         <Button
                             android:id="@+id/button4"
                             android:layout_width="80dp"
                             android:layout_height="50dp"
                             android:layout_alignBaseline="@+id/button3"
                             android:layout_alignBottom="@+id/button3"
                             android:layout_alignLeft="@+id/button2"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
                             android:onClick="Send"
                             android:text="@string/button_send" />
                         <EditText
                             android:id="@+id/value0"
                             android:layout_width="200dp"
                             android:layout_height="60dp"
                             android:layout_alignLeft="@+id/button1"
                             android:layout_alignParentTop="true"
                             android:layout_marginTop="15dp"
                             android:ems="10"
                             android:hint="@string/value0"
                             android:imeActionLabel="Next"
                             android:imeOptions="actionNext" />

                         <TextView
                             android:id="@+id/TextView3"
                             android:layout_width="200dp"
                             android:layout_height="60dp"
                             android:layout_alignLeft="@+id/TextView4"
                             android:layout_below="@+id/button3"
                             android:layout_marginTop="91dp"
                             android:text="Longitude"
                             android:textSize="26sp" />

                         <TextView
                             android:id="@+id/TextView4"
                             android:layout_width="200dp"
                             android:layout_height="60dp"
                             android:layout_alignLeft="@+id/button3"
                             android:layout_below="@+id/TextView3"
                             android:layout_marginTop="32dp"
                             android:text="Latitude"
                             android:textSize="26sp" />

                         <Button
                             android:id="@+id/button5"
                             android:layout_width="80dp"
                             android:layout_height="50dp"
                             android:layout_alignLeft="@+id/button3"
                             android:layout_below="@+id/button3"
                             android:layout_marginTop="14dp"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
                             android:onClick="Erase"
                             android:text="@string/button_erase" />

                                                  <Button
                                                      android:id="@+id/button6"
                                                      android:layout_width="120dp"
                                                      android:layout_height="50dp"
                                                      android:layout_alignTop="@+id/button5"
                                                      android:layout_toRightOf="@+id/button1"
                                                      android:focusable="false"
                                                      android:focusableInTouchMode="false"
                                                      android:text="@string/button_getsensor" />
    
</RelativeLayout>
